samples/_failures_safe/1761444926_a7877c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6dcf928.c: In function ‘main’:
./samples/SAFE/__tmp_f6dcf928.c:177:18: error: expected ‘)’ at end of input
  177 |         if (fgets
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_f6dcf928.c:177:9: error: expected declaration or statement at end of input
  177 |         if (fgets
      |         ^~
./samples/SAFE/__tmp_f6dcf928.c:177:9: error: expected declaration or statement at end of input
